Fix preview issue