@@ -36,3 +36,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.1.0'
     annotationProcessor 'org.jetbrains:annotations:24.1.0'
 }
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
